--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -19,7 +19,7 @@
       <td><div class="btn-group">
         <button type="button" class="btn btn-info" (click)="userView(artist)">View</button>
         <button type="button" class="btn btn-danger" (click)="userBlock(userData)">Block</button>
-        <button type="button" class="btn btn-success" (click)="userEdit(userData)">Edit</button>
+        <button type="button" class="btn btn-success" (click)="userEdit(artist)">Edit</button>
       </div></td>
     </tbody>
     <tfoot>
