--- a/src/app/partials/sidebar/sidebar.component.html
+++ b/src/app/partials/sidebar/sidebar.component.html
@@ -49,9 +49,9 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a (click)="redirectToStaticpage(1)"><i class="fa fa-circle-o"></i> About us</a></li>
-                    <li><a (click)="redirectToStaticpage(2)"><i class="fa fa-circle-o"></i> Terms and conditions</a></li>
-                    <li><a (click)="redirectToStaticpage(3)"><i class="fa fa-circle-o"></i> Privacy policy</a></li>
+                    <li><a (click)="redirectToStaticpage('5d832425dfbf871440b8241c')"><i class="fa fa-circle-o"></i> About us</a></li>
+                    <li><a (click)="redirectToStaticpage('5d8340a2dfbf871440b8241d')"><i class="fa fa-circle-o"></i> Terms and conditions</a></li>
+                    <li><a (click)="redirectToStaticpage('5d8340bfdfbf871440b8241e')"><i class="fa fa-circle-o"></i> Privacy policy</a></li>
                     <li><a (click)="redirectToStaticpage(4)"><i class="fa fa-circle-o"></i> Contact</a></li>
                 </ul>
             </li>
